--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.0",
     "cloudinary-react": "^1.8.1",
     "formik": "^2.4.2",
     "framer-motion": "^10.12.16",
@@ -17,6 +18,7 @@
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.11",
     "sweetalert": "^2.1.2",
